--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: QSphere
-url: "https://qualitysphere.github.io"
+url: ""
 baseurl:
 google_analytics_key:
 show_full_navigation: true
